--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -9,8 +9,16 @@
 <br />
 <hr />
 <br />
-<div id="generalInfo">
-    @Html.Partial("Sections/GeneralInfo", Model)
+<div class="panel-group" style="width: 50%;">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="alert-info">@Ajax.ActionLink("General Info", "GeneralInfo", "Terminals", new { terminalId = Model.Id }, new AjaxOptions { UpdateTargetId = "getGeneralInfo", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getGeneralInfo" })</h3>
+
+            <div id="getGeneralInfo" class="panel-collapse collapse">
+
+            </div>
+        </div>
+    </div>
 </div>
 <br />
 <hr />
@@ -39,8 +47,16 @@
 <br />
 <hr />
 <br />
-<div id="contacts">
-    @Html.Partial("Sections/Contacts", Model)
+<div class="panel-group" style="width: 100%;">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="alert-info">@Ajax.ActionLink("Contacts", "Contacts", "Terminals", new { terminalId = Model.Id }, new AjaxOptions { UpdateTargetId = "getContacts", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getContacts" })</h3>
+
+            <div id="getContacts" class="panel-collapse collapse">
+
+            </div>
+        </div>
+    </div>
 </div>
 <br />
 <hr />
@@ -80,3 +96,7 @@
 <br />
 <hr />
 <br />
+
+@section Scripts {
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+}
