--- a/OctagonPlatform/Views/BankAccount/Index.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Index.cshtml
@@ -1,96 +1,112 @@
-﻿@model IEnumerable<OctagonPlatform.Models.FormsViewModels.BAccountFVModel>
+﻿@model IEnumerable<OctagonPlatform.Models.BankAccount>
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
+
 <h3 class="alert-info">List of BankAccounts</h3>
-<nav class="navbar navbar-default"> 
+<nav class="navbar navbar-default">
     <div class="container-fluid">
-        
+
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active">@Html.ActionLink(
-                                       linkText: "Add BankAccount",
-                                       actionName: "Create",
-                                       controllerName: "BankAccount",
-                                       routeValues: new
-                                       {
-                                           partnerId = 1
-                                       },
-                                       htmlAttributes: null
-                                       )</li>
+                <li class="active">
+                    @Html.ActionLink(
+                        linkText: "Add BankAccount",
+                        actionName: "Create",
+                        controllerName: "BankAccount",
+                        routeValues: new
+                        {
+                            partnerId = 1
+                        },
+                        htmlAttributes: null
+                        )
+                </li>
+
+
             </ul>
             <div class="form-group">
-                <input type="text" class="form-control" id="searchPartner" placeholder="Search" name="search" />
+                <input type="text" class="form-control search" id="searchPartner" placeholder="Search" name="search" />
             </div> 
         </div>
     </div>
 </nav>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.NickName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RoutingNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccountNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Status)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NameOnCheck)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccountType)
-        </th>
-        <th></th>
-    </tr>
-    <tbody id="listOfBA">
+<p class="alert alert-info">
+    <strong>@ViewBag.Error</strong>
+</p>
+
+<table class="table table-striped table-hover ">
+
+    <thead>
+        <tr>
+            <th>NickName</th>
+            <th>RoutingNumber</th>
+            <th>AccountNumber</th>
+            <th>Name on Check</th>
+            <th>Account Type</th>
+            <th>Phone</th>
+            <th>Email</th>
+            <th>Status</th>
+        </tr>
+    </thead>
+    <tbody id="listOfPartners">
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NickName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RoutingNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AccountNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Status)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NameOnCheck)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Phone)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AccountType)
-                </td>
-                    <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
-                    <td><i class="glyphicon glyphicon-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = item.Id})
+            if (!item.Deleted)
+            {
+                <tr class="info">
+                    <td>@item.NickName</td>
+                    <td>@item.RoutingNumber</td>
+                    <td>@item.AccountNumber</td>
+                    <td>@item.NameOnCheck</td>
+                    <td>@item.AccountType</td>
+                    <td>@item.Phone</td>
+                    <td>@item.Email</td>
+                    <td>@item.Status</td>
+                    <td>
+                        <i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                                linkText: "Edit",
+                                                                actionName: "Edit",
+                                                                controllerName: "BankAccount",
+                                                                routeValues: new
+                                                                {
+                                                                    id = item.Id
+                                                                },
+                                                                htmlAttributes: null
+                                                                )
                     </td>
-                    <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink("Details", "Details", new {id = item.Id})</td>
-            </tr>
+                    <td>
+                        <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                                 linkText: "Delete",
+                                                                 actionName: "Delete",
+                                                                 controllerName: "BankAccount",
+                                                                 routeValues: new
+                                                                 {
+                                                                     id = item.Id
+                                                                 },
+                                                                 htmlAttributes: null
+                                                                 )
+                    </td>
+                    <td>
+                        <i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                                                                    linkText: "Details",
+                                                                    actionName: "Details",
+                                                                    controllerName: "BankAccount",
+                                                                    routeValues: new
+                                                                    {
+                                                                        id = item.Id
+                                                                    },
+                                                                    htmlAttributes: null
+                                                                    )
+                    </td>
+                </tr>
+            }
         }
     </tbody>
 </table>
+
+
 @section Scripts {
     @Scripts.Render("~/bundles/search")
 }
