--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -29,13 +29,13 @@
     </div>
 </nav>
 
-<p class="alert alert-danger">
+<p class="alert alert-info">
     <strong>@ViewBag.Error</strong>
 </p>
 <table class="table table-striped table-hover ">
     
     <thead>
-    <tr class="danger">
+    <tr>
         <th>Parent</th>
         <th>Business Name</th>
         <th>Address</th>
@@ -47,7 +47,7 @@
     <tbody id ="listOfPartners">
         @foreach (var item in Model)
         {
-            <tr class="active">
+            <tr class="info">
                 <td>@item.Parent.BusinessName</td>
                 <td>@item.BusinessName</td>
                 <td>@item.Address1</td>
