--- a/OctagonPlatform/Views/Partners/Sections/BankAccounts.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/BankAccounts.cshtml
@@ -1,5 +1,4 @@
 ﻿@model OctagonPlatform.Models.Partner
-<h3  class="alert-info">Bank Accounts</h3>
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -25,70 +24,40 @@
         </div>
     </div>
 </nav>
-<p class="alert alert-danger">
+<p class="alert alert-info">
     <strong>@ViewBag.Error</strong>
 </p>
+
 <table class="table table-striped table-hover ">
+
     <thead>
     <tr>
-        <th>
-            NickName
-        </th>
-        <th>
-            Routing Number
-        </th>
-        <th>
-            Account Number
-        </th>
-        <th>
-            Status
-        </th>
-        <th>
-            Name on Check
-        </th>
-        <th>
-            Phone
-        </th>
-        <th>
-            Email
-        </th>
-        <th>
-            Account Type
-        </th>
-        <th></th>
+        <th>NickName</th>
+        <th>RoutingNumber</th>
+        <th>AccountNumber</th>
+        <th>Name on Check</th>
+        <th>Account Type</th>
+        <th>Phone</th>
+        <th>Email</th>
+        <th>Status</th>
     </tr>
     </thead>
-    <tbody id="listOfBA">
+    <tbody id="listOfPartners">
     @foreach (var item in Model.BankAccounts)
     {
         if (!item.Deleted)
         {
-            <tr class="active">
+            <tr class="info">
+                <td>@item.NickName</td>
+                <td>@item.RoutingNumber</td>
+                <td>@item.AccountNumber</td>
+                <td>@item.NameOnCheck</td>
+                <td>@item.AccountType</td>
+                <td>@item.Phone</td>
+                <td>@item.Email</td>
+                <td>@item.Status</td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.NickName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RoutingNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AccountNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Status)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NameOnCheck)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Phone)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AccountType)
-                </td>
-                <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                    <i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
                                                                 linkText: "Edit",
                                                                 actionName: "Edit",
                                                                 controllerName: "BankAccount",
@@ -97,8 +66,10 @@
                                                                     id = item.Id
                                                                 },
                                                                 htmlAttributes: null
-                                                                )</td>
-                <td><i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                                )
+                </td>
+                <td>
+                    <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
                                                                  linkText: "Delete",
                                                                  actionName: "Delete",
                                                                  controllerName: "BankAccount",
@@ -109,7 +80,8 @@
                                                                  htmlAttributes: null
                                                                  )
                 </td>
-                <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                <td>
+                    <i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
                                                                     linkText: "Details",
                                                                     actionName: "Details",
                                                                     controllerName: "BankAccount",
@@ -118,7 +90,8 @@
                                                                         id = item.Id
                                                                     },
                                                                     htmlAttributes: null
-                                                                    )</td>
+                                                                    )
+                </td>
             </tr>
         }
     }
