--- a/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
@@ -2,7 +2,6 @@
 @model OctagonPlatform.Models.Partner
 
 
-<h3  class="alert-info">Partners</h3>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         
@@ -24,13 +23,13 @@
     </div>
 </nav>
 
-<p class="alert alert-danger">
+<p class="alert alert-info">
     <strong>@ViewBag.Error</strong>
 </p>
 <table class="table table-striped table-hover ">
     
     <thead>
-    <tr class="danger">
+    <tr>
         <th>Parent</th>
         <th>Business Name</th>
         <th>Address</th>
@@ -44,7 +43,7 @@
     {
         if (!item.Deleted)
         {
-            <tr class="active">
+            <tr class="info">
                 <td>@item.Parent.BusinessName</td>
                 <td>@item.BusinessName</td>
                 <td>@item.Address1</td>
