--- a/OctagonPlatform/Views/Partners/Sections/Terminals.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Terminals.cshtml
@@ -1,7 +1,6 @@
 ﻿
 @model OctagonPlatform.Models.Partner
 
-<h3 class="alert-info">Terminals</h3>
 <nav class="navbar navbar-default"> 
     <div class="container-fluid">
         
@@ -23,12 +22,12 @@
     </div>
 </nav>
 
-<p class="alert alert-danger">
+<p class="alert alert-info">
     <strong>@ViewBag.Error</strong>
 </p>
 <table class="table table-striped table-hover ">
     <thead>
-    <tr class="danger">
+    <tr>
         <th>Terminal ID</th>
         <th>Partner</th>
         <th>Address</th>
@@ -47,7 +46,7 @@
     {
         if (!item.Deleted)
         {
-            <tr class="active">
+            <tr class="info">
                 <td>@item.Id</td>
                 <td>@item.Partner.BusinessName</td>
                 <td>@item.Address1</td>
