--- a/OctagonPlatform/Views/Partners/Sections/Users.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Users.cshtml
@@ -1,6 +1,5 @@
 ﻿@model OctagonPlatform.Models.Partner
 
-<h3 class="alert-info">Users</h3>
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -26,7 +25,7 @@
     </div>
 </div>
 </nav>
-<p class="alert alert-danger">
+<p class="alert alert-info">
     <strong>@ViewBag.Error</strong>
 </p>
 <table class="table table-striped table-hover ">
@@ -45,7 +44,7 @@
         {
             if (!item.Deleted)
             {
-                <tr  class="active">
+                <tr  class="info">
                     <td>@item.Partner.BusinessName</td>
                     <td>@item.Name</td>
                     <td>@item.LastName</td>
