--- a/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
@@ -32,7 +32,7 @@
 </nav>
 
 
-<p class="alert alert-danger">
+<p class="alert alert-info">
     <strong>@ViewBag.Error</strong>
 </p>
 <table class="table table-striped table-hover ">
