--- a/OctagonPlatform/Views/BankAccount/Details.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-
+<p class="alert-danger">@ViewBag.Error</p>
 <h3 class="alert-info">BankAccount Details</h3>
 
 <div>
