--- a/OctagonPlatform/Views/BankAccount/Search.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Search.cshtml
@@ -1,66 +1,58 @@
-﻿@model IEnumerable<OctagonPlatform.Models.FormsViewModels.BAccountFVModel>
+﻿@model IEnumerable<OctagonPlatform.Models.BankAccount>
 
 @foreach (var item in Model)
 {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.City.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Country.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Partner.BusinessName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.State.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NickName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RoutingNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccountNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NameOnCheck)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FedTax)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ssn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address2)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Zip)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccountType)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Id },
-                                                                 new { onclick = "return confirm('Are sure wants to delete?');" }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-        </td>
-    </tr>
+    if (!item.Deleted)
+    {
+        <tr class="info">
+            <td>@item.NickName</td>
+            <td>@item.RoutingNumber</td>
+            <td>@item.AccountNumber</td>
+            <td>@item.NameOnCheck</td>
+            <td>@item.AccountType</td>
+            <td>@item.Phone</td>
+            <td>@item.Email</td>
+            <td>@item.Status</td>
+            <td>
+                <i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                            linkText: "Edit",
+                                                            actionName: "Edit",
+                                                            controllerName: "BankAccount",
+                                                            routeValues: new
+                                                            {
+                                                                id = item.Id
+                                                            },
+                                                            htmlAttributes: null
+                                                            )
+            </td>
+            <td>
+                <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                             linkText: "Delete",
+                                                             actionName: "Delete",
+                                                             controllerName: "BankAccount",
+                                                             routeValues: new
+                                                             {
+                                                                 id = item.Id
+                                                             },
+                                                             htmlAttributes: null
+                                                             )
+            </td>
+            <td>
+                <i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                                                                linkText: "Details",
+                                                                actionName: "Details",
+                                                                controllerName: "BankAccount",
+                                                                routeValues: new
+                                                                {
+                                                                    id = item.Id
+                                                                },
+                                                                htmlAttributes: null
+                                                                )
+            </td>
+        </tr>
+    }
 }
 
-
+@section Scripts {
+    @Scripts.Render("~/bundles/search")
+}
