Actualizacion de NugetPackages

--- a/OctagonPlatform/Views/TerminalContacts/Index.cshtml
+++ b/OctagonPlatform/Views/TerminalContacts/Index.cshtml
@@ -11,11 +11,11 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-            <form class="navbar-form navbar-left form-group">
+            @*<form class="navbar-form navbar-left form-group">
                 <div>
                     <input type="text" id="searchTerminalContact" class="form-control" placeholder="Search" name="search">
                 </div>
-            </form>
+            </form>*@
 
         </div>
     </div>
