--- a/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
@@ -21,11 +21,11 @@
 
 
         </ul>
-            <form class="navbar-form navbar-left form-group">
+            @*<form class="navbar-form navbar-left form-group">
                 <div>
                     <input type="text" id="searchTerminalContact" class="form-control" placeholder="Search" name="search">
                 </div>
-            </form>
+            </form>*@
 
         </div>
     </div>
