--- a/OctagonPlatform/Content/bootstrap.css
+++ b/OctagonPlatform/Content/bootstrap.css
@@ -1,14 +1,3 @@
-/* NUGET: BEGIN LICENSE TEXT
- *
- * Microsoft grants you the right to use these script files for the sole
- * purpose of either: (i) interacting through your browser with the Microsoft
- * website or online service, subject to the applicable licensing or use
- * terms; or (ii) using the files as included with a Microsoft product subject
- * to that product's license terms. Microsoft reserves all other rights to the
- * files not expressly granted by Microsoft, whether by implication, estoppel
- * or otherwise. The notices and licenses below are for informational purposes only.
- *
- * NUGET: END LICENSE TEXT */
 /*!
  * Bootstrap v3.0.0
  *
@@ -1209,7 +1198,7 @@ pre code {
   .col-md-offset-1 {
     margin-left: 8.333333333333332%;
   }
-  .form-group {
+  .col-md-offset-2 {
     margin-left: 16.666666666666664%;
   }
   .col-md-offset-3 {
