--- a/OctagonPlatform/Views/Partners/Sections/BankAccounts.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/BankAccounts.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.Partner
+﻿@model IEnumerable<OctagonPlatform.Models.BankAccount>
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -12,7 +12,7 @@
                         controllerName: "BankAccount",
                         routeValues: new
                         {
-                            partnerId = Model.Id
+                            partnerId = ViewBag.PartnerId
                         },
                         htmlAttributes: null
                         )
@@ -43,7 +43,7 @@
     </tr>
     </thead>
     <tbody id="listOfPartners">
-    @foreach (var item in Model.BankAccounts)
+    @foreach (var item in Model)
     {
         if (!item.Deleted)
         {
