--- a/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model OctagonPlatform.Models.Partner
+@model IEnumerable<OctagonPlatform.Models.Partner>
 
 
 <nav class="navbar navbar-default">
@@ -13,7 +13,7 @@
                                        controllerName: "Partners",
                                        routeValues: new
                                        {
-                                           partnerId = Model.Id
+                                           partnerId = ViewBag.PartnerId
                                        },
                                        htmlAttributes: null
                                        )</li>
@@ -39,7 +39,7 @@
     </tr>
     </thead>
     <tbody id ="listOfPartners">
-    @foreach (var item in Model.Partners)
+    @foreach (var item in Model)
     {
         if (!item.Deleted)
         {
@@ -82,6 +82,7 @@
                                                                     htmlAttributes: null
                                                                     )</td>
             </tr>
+
         }
     }
     </tbody>
