--- a/OctagonPlatform/Views/Users/Index.cshtml
+++ b/OctagonPlatform/Views/Users/Index.cshtml
@@ -32,6 +32,7 @@
 <table class="table table-striped table-hover ">
     <thead>
     <tr>
+        <th>Username</th>
         <th>Parent</th>
         <th>Name</th>
         <th>Last Name</th>
@@ -44,6 +45,7 @@
     @foreach (var item in Model)
     {
         <tr class="info">
+            <td>@item.UserName</td>
             <td>@item.Partner.BusinessName</td>
             <td>@item.Name</td>
             <td>@item.LastName</td>
