Vaultcash Get, Render, To Edit

--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -17,7 +17,7 @@
                                        controllerName: "Terminals",
                                        routeValues: new
                                        {
-                                           partnerId = 1
+                                           partnerId = int.Parse(Session["partnerId"].ToString())
                                        },
                                        htmlAttributes: null
                                        )</li>
