--- a/OctagonPlatform/Views/BankAccount/Index.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Index.cshtml
@@ -18,7 +18,7 @@
                         controllerName: "BankAccount",
                         routeValues: new
                         {
-                            partnerId = 1
+                            partnerId = int.Parse(Session["partnerId"].ToString())
                         },
                         htmlAttributes: null
                         )
