--- a/OctagonPlatform/Views/Users/Index.cshtml
+++ b/OctagonPlatform/Views/Users/Index.cshtml
@@ -17,7 +17,7 @@
                                        controllerName: "Users",
                                        routeValues: new
                                        {
-                                           partnerId = 1
+                                           partnerId = int.Parse(Session["partnerId"].ToString())
                                        },
                                        htmlAttributes: null
                                        )
