--- a/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
@@ -24,34 +24,32 @@
     </tr>
     <tbody></tbody>
 </table>
-            <input type="checkbox" name="Messages" value="1" />Chest door is open<br />
-            <input type="checkbox" name="Messages" value="2" />Top door is Open<br />
-            <input type="checkbox" name="Messages" value="3" />Receipt printer paper  is low/out<br />
-            <input type="checkbox" name="Messages" value="4" />Receipt printer ribbon is low/out<br />
-            <input type="checkbox" name="Messages" value="5" />Journal printer paper is low/out<br />
-            <input type="checkbox" name="Messages" value="6" />Journal printer ribbon is low/out<br />
-            <input type="checkbox" name="Messages" value="7" />Cassette notes are out<br />
-            <input type="checkbox" name="Messages" value="8" />Receipt printer need attention or out of service<br />
-            <input type="checkbox" name="Messages" value="9" />Journal printer needs attention or out of service<br />
-            <input type="checkbox" name="Messages" value="10" />Bill dispenser needs attention or out of service<br />
-            <input type="checkbox" name="Messages" value="11" />Comm system needs attention or out of service<br />
-            <input type="checkbox" name="Messages" value="12" />Card reader needs attention or out of service<br />
- 
- 
+@Html.CheckBoxFor(m => m.IgnoreBillDispenserNeedAttention) Bill dispenser needs attention or out of service<br />
+@Html.CheckBoxFor(m => m.IgnoreCardReaderNeedAttention) Card reader needs attention or out of service<br />
+@Html.CheckBoxFor(m => m.IgnoreCassetteNotes) Cassette notes are out<br />
+@Html.CheckBoxFor(m => m.IgnoreChestDoorOpen) Chest door is open<br />
+@Html.CheckBoxFor(m => m.IgnoreCommNeedAttention) Comm system needs attention or out of service<br />
+@Html.CheckBoxFor(m => m.IgnoreJournalNeedAttention) Journal printer needs attention or out of service<br />
+@Html.CheckBoxFor(m => m.IgnoreJournalPaper) Journal printer paper is low/out<br />
+@Html.CheckBoxFor(m => m.IgnoreJournalRibbon) Journal printer ribbon is low/out<br />
+@Html.CheckBoxFor(m => m.IgnoreReceiptNeedAttention) Receipt printer need attention or out of service<br />
+@Html.CheckBoxFor(m => m.IgnoreReceiptPaper) Receipt printer paper is low/out<br />
+@Html.CheckBoxFor(m => m.IgnoreReceiptRibbon) Receipt printer ribbon is low/out<br />
+@Html.CheckBoxFor(m => m.IgnoreTopDoorOpen) Top door is Open<br />
 
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
 
-    <div id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
-                </div>
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+            </div>
 
-                <h3 class="alert-info">Edit Config Alert</h3>
+            <h3 class="alert-info">Edit Config Alert</h3>
 
-                @using (Html.BeginForm("EditConfigAlert", "Terminals"))
+            @using (Html.BeginForm("EditConfigAlert", "Terminals"))
             {
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(m => m.TerminalId)
@@ -81,18 +79,18 @@
                     @Html.ValidationMessageFor(m => m.LowCash3)
                 </div>
                 <div class="form-group">
-                    <input type="checkbox" name="Messages" value="1" />Chest door is open<br />
-                    <input type="checkbox" name="Messages" value="2" />Top door is Open<br />
-                    <input type="checkbox" name="Messages" value="3" />Receipt printer paper  is low/out<br />
-                    <input type="checkbox" name="Messages" value="4" />Receipt printer ribbon is low/out<br />
-                    <input type="checkbox" name="Messages" value="5" />Journal printer paper is low/out<br />
-                    <input type="checkbox" name="Messages" value="6" />Journal printer ribbon is low/out<br />
-                    <input type="checkbox" name="Messages" value="7" />Cassette notes are out<br />
-                    <input type="checkbox" name="Messages" value="8" />Receipt printer need attention or out of service<br />
-                    <input type="checkbox" name="Messages" value="9" />Journal printer needs attention or out of service<br />
-                    <input type="checkbox" name="Messages" value="10" />Bill dispenser needs attention or out of service<br />
-                    <input type="checkbox" name="Messages" value="11" />Comm system needs attention or out of service<br />
-                    <input type="checkbox" name="Messages" value="12" />Card reader needs attention or out of service<br />
+                    @Html.CheckBoxFor(m => m.IgnoreBillDispenserNeedAttention) Bill dispenser needs attention or out of service<br />
+                    @Html.CheckBoxFor(m => m.IgnoreCardReaderNeedAttention) Card reader needs attention or out of service<br />
+                    @Html.CheckBoxFor(m => m.IgnoreCassetteNotes) Cassette notes are out<br />
+                    @Html.CheckBoxFor(m => m.IgnoreChestDoorOpen) Chest door is open<br />
+                    @Html.CheckBoxFor(m => m.IgnoreCommNeedAttention) Comm system needs attention or out of service<br />
+                    @Html.CheckBoxFor(m => m.IgnoreJournalNeedAttention) Journal printer needs attention or out of service<br />
+                    @Html.CheckBoxFor(m => m.IgnoreJournalPaper) Journal printer paper is low/out<br />
+                    @Html.CheckBoxFor(m => m.IgnoreJournalRibbon) Journal printer ribbon is low/out<br />
+                    @Html.CheckBoxFor(m => m.IgnoreReceiptNeedAttention) Receipt printer need attention or out of service<br />
+                    @Html.CheckBoxFor(m => m.IgnoreReceiptPaper) Receipt printer paper is low/out<br />
+                    @Html.CheckBoxFor(m => m.IgnoreReceiptRibbon) Receipt printer ribbon is low/out<br />
+                    @Html.CheckBoxFor(m => m.IgnoreTopDoorOpen) Top door is Open<br />
                 </div>
 
                 <div class="form-group">
@@ -101,9 +99,9 @@
                         <button type="submit" class="btn btn-primary">Save</button>
                     </div>
                 </div>
-                }
-            </div>
+            }
         </div>
     </div>
+</div>
 
 </div>
