--- a/OctagonPlatform/Views/BankAccount/Index.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Index.cshtml
@@ -41,6 +41,7 @@
     <thead>
         <tr>
             <th>NickName</th>
+            <th>BankName</th>
             <th>RoutingNumber</th>
             <th>AccountNumber</th>
             <th>Name on Check</th>
@@ -57,6 +58,7 @@
             {
                 <tr class="info">
                     <td>@item.NickName</td>
+                    <td>@item.BankName</td>
                     <td>@item.RoutingNumber</td>
                     <td>@item.AccountNumber</td>
                     <td>@item.NameOnCheck</td>
