--- a/OctagonPlatform/Views/BankAccount/Search.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Search.cshtml
@@ -6,6 +6,7 @@
     {
         <tr class="info">
             <td>@item.NickName</td>
+            <td>@item.BankName</td>
             <td>@item.RoutingNumber</td>
             <td>@item.AccountNumber</td>
             <td>@item.NameOnCheck</td>
