--- a/OctagonPlatform/Views/Partners/Sections/BankAccounts.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/BankAccounts.cshtml
@@ -33,6 +33,7 @@
     <thead>
     <tr>
         <th>NickName</th>
+        <th>BankName</th>
         <th>RoutingNumber</th>
         <th>AccountNumber</th>
         <th>Name on Check</th>
@@ -49,6 +50,7 @@
         {
             <tr class="info">
                 <td>@item.NickName</td>
+                <td>@item.BankName</td>
                 <td>@item.RoutingNumber</td>
                 <td>@item.AccountNumber</td>
                 <td>@item.NameOnCheck</td>
