--- a/OctagonPlatform/Views/BankAccount/Delete.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Delete.cshtml
@@ -26,7 +26,13 @@
         <dd>
             @Html.DisplayFor(model => model.NickName)
         </dd>
+        <dt>
+            BankName
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.BankName)
+        </dd>
         <dt>
             Status
         </dt>
