--- a/OctagonPlatform/Views/BankAccount/Details.cshtml
+++ b/OctagonPlatform/Views/BankAccount/Details.cshtml
@@ -50,7 +50,13 @@
         <dd>
             @Html.DisplayFor(model => model.NickName)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.BankName)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.BankName)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.RoutingNumber)
         </dt>
