--- a/OctagonPlatform/Views/VaultCash/Index.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Index.cshtml
@@ -1,8 +1,91 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
-}
+﻿@model OctagonPlatform.Models.VaultCash
+    
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        @if (Model == null)
+        {
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        @Html.ActionLink(
+                            linkText: "Add VaultCash",
+                            actionName: "Create",
+                            controllerName: "VaultCash",
+                            routeValues: new
+                            {
+                                terminalId = ViewBag.TerminalId
+                            },
+                            htmlAttributes: null
+                            )
+                    </li>
+                </ul>
 
-<h2>Index</h2>
+            </div>
+        }
+    </div>
+</nav>
+
+<p class="alert alert-info">
+    <strong>@ViewBag.Error</strong>
+</p>
+<table class="table table-striped table-hover ">
+
+    <thead>
+    <tr>
+        <th>BankAccount</th>
+        <th>BankName</th>
+        <th>Effective Date</th>
+        <th>Stop Date</th>
+    </tr>
+    </thead>
+    <tbody id="vaultCash">
+        @if (!Model.Deleted)
+        {
+            <tr class="info">
+                <td>@Model.BankAccount.NickName</td>
+                <td>@Model.BankAccount.BankName</td>
+                <td>@Model.StartDate</td>
+                <td>@Model.StopDate</td>
+                <td>
+                    <i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                                linkText: "Edit",
+                                                                actionName: "Edit",
+                                                                controllerName: "PartnerContacts",
+                                                                routeValues: new
+                                                                {
+                                                                    id = Model.Id
+                                                                },
+                                                                htmlAttributes: null
+                                                                )
+                </td>
+                <td>
+                    <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                                 linkText: "Delete",
+                                                                 actionName: "Delete",
+                                                                 controllerName: "PartnerContacts",
+                                                                 routeValues: new
+                                                                 {
+                                                                     id = Model.Id
+                                                                 },
+                                                                 htmlAttributes: null
+                                                                 )
+                </td>
+                <td>
+                    <i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                                                                    linkText: "Details",
+                                                                    actionName: "Details",
+                                                                    controllerName: "PartnerContacts",
+                                                                    routeValues: new
+                                                                    {
+                                                                        id = Model.Id
+                                                                    },
+                                                                    htmlAttributes: null
+                                                                    )
+                </td>
+            </tr>
+        }
+    
+    </tbody>
+</table>
+
 
