--- a/OctagonPlatform/Views/VaultCash/Index.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Index.cshtml
@@ -25,7 +25,7 @@
     </div>
 </nav>
 
-<p class="alert alert-info">
+@*<p class="alert alert-info">
     <strong>@ViewBag.Error</strong>
 </p>
 <table class="table table-striped table-hover ">
@@ -86,6 +86,6 @@
         }
     
     </tbody>
-</table>
+</table>*@
 
 
