--- a/OctagonPlatform/Views/VaultCash/Create.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Create.cshtml
@@ -5,17 +5,20 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Create</h2>
+<h3 class="alert-info">Create VaultCash</h3>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "VaultCash", FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>VaultCashFormViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+    <div class="form-group">
+        <p class="alert alert-danger">
+            All fields are <strong>required.</strong>
+            @ViewBag.Error
+            @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
+        </p>
+        @Html.HiddenFor(m => m.Id)
         <div class="form-group">
             @Html.LabelFor(m => m.BankAccountId)
             @Html.DropDownListFor(m => m.BankAccountId, new SelectList(Model.BankAccounts, "Id", "NickName"), "", new { @class = "form-control" })
@@ -23,40 +26,31 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SettledType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.SettledType, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.SettledType, "", new { @class = "text-danger" })
-            </div>
+            @Html.LabelFor(m => m.SettledType)
+            @Html.EnumDropDownListFor(m => m.SettledType, "", new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.SettledType)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.StartDate)
+            @Html.TextBoxFor(m => m.StartDate, new { @class = "form-control", autofocus = "autofocus", @type = "date"})
+            @Html.ValidationMessageFor(m => m.StartDate)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.StopDate)
+            @Html.TextBoxFor(m => m.StopDate, new { @class = "form-control", autofocus = "autofocus", @type = "date" })
+            @Html.ValidationMessageFor(m => m.StopDate)
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.StopDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StopDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StopDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-lg-10 col-lg-offset-2">
+                <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+                <button type="submit" class="btn btn-primary">Save</button>
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
