--- a/OctagonPlatform/Views/VaultCash/Delete.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Delete.cshtml
@@ -51,7 +51,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
         </div>
     }
 </div>
