--- a/OctagonPlatform/Views/VaultCash/Details.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Details.cshtml
@@ -133,7 +133,24 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+<div class="form-group">
+    <div class="col-lg-10 col-lg-offset-2">
+        <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+        @Html.ActionLink(
+            linkText: "Edit",
+            actionName: "Edit",
+            controllerName: "VaultCash",
+            routeValues: new
+            {
+                Model.Id
+            },
+            htmlAttributes: new
+            {
+                @type = "submit",
+                @class = "btn btn-warning"
+
+            }
+            )
+    </div>
+</div>
+
