--- a/OctagonPlatform/Views/VaultCash/Edit.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Edit.cshtml
@@ -4,63 +4,52 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
+<h3 class="alert-info">Edit VaultCash</h3>
 
-<h2>Edit</h2>
 
-
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "VaultCash", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>VaultCashFormViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.TerminalId)
 
+    <div class="form-group">
+        <p class="alert alert-danger">
+            All fields are <strong>required.</strong>
+            @ViewBag.Error
+            @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
+        </p>
+        @Html.HiddenFor(m => m.Id)
         <div class="form-group">
-            @Html.LabelFor(model => model.BankAccountId, "BankAccountId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("BankAccountId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.BankAccountId, "", new { @class = "text-danger" })
-            </div>
+            @Html.LabelFor(m => m.BankAccountId)
+            @Html.DropDownListFor(m => m.BankAccountId, new SelectList(Model.BankAccounts, "Id", "NickName"), "", new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.BankAccountId)
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SettledType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.SettledType, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.SettledType, "", new { @class = "text-danger" })
-            </div>
+            @Html.LabelFor(m => m.SettledType)
+            @Html.EnumDropDownListFor(m => m.SettledType, "", new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.SettledType)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.StartDate)
+            @Html.TextBoxFor(m => m.StartDate, new { @class = "form-control", autofocus = "autofocus", @Value = Model.StartDate.ToShortDateString()})
+            @Html.ValidationMessageFor(m => m.StartDate)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.StopDate)
+            @Html.TextBoxFor(m => m.StopDate, new { @class = "form-control", autofocus = "autofocus", @Value = Model.StopDate.ToShortDateString() })
+            @Html.ValidationMessageFor(m => m.StopDate)
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.StopDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StopDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StopDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="col-lg-10 col-lg-offset-2">
+                <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+                <button type="submit" class="btn btn-primary">Save</button>
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
